[gd_scene load_steps=2 format=3 uid="uid://vsl6xhcapjq0"]

[ext_resource type="Script" path="res://ui.gd" id="1_ghp7s"]

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_ghp7s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Player1Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player 1"

[node name="Player1Time" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 0"

[node name="Player1Attempts" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attempts: 0"

[node name="Player1BestTime" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Best time: 0"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Player2Label" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Player 2"

[node name="Player2Time" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 0"

[node name="Player2Attempts" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Attempts: 0"

[node name="Player2BestTime" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Best time: 0"
